<resources>
    <string name="app_name">MostWantedApp</string>
    <string name="session_cannot_copy_the_role">User is logged in but no role was found!</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="create_new_account">Create new Account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="personal_number">Personal Number</string>
    <string name="guest">Report as Guest</string>
    <string name="full_name">Full Name</string>
    <string name="select_a_age">Select a age</string>
    <string name="select_a_height">Select a height</string>
    <string name="select_a_weight">Select a weight</string>
    <string name="select_a_eye_color">Select a eye color</string>
    <string name="select_a_hair_color">Select a hair color</string>
    <string name="select_a_physical_appearance">Select a physical appearance</string>
    <string name="select_a_type_of_crime">Select a type of crime</string>
    <string name="register_person">Register Person</string>
    <string name="update_person">Update Person</string>
    <string name="person">Person</string>
    <string name="error_first_investigator_required">First investigator is required!</string>
    <string name="error_second_investigator_required">Second investigator is required!</string>
    <string name="error_fullname_required">Full name is required!</string>
    <string name="error_address_required">Address is required!</string>
    <string name="error_parent_name_required">Parent Name is required!</string>
    <string name="error_last_name_required">Last Name is required!</string>
    <string name="error_first_name_required">First Name is required!</string>
    <string name="error_age_required">Age is required!</string>
    <string name="error_height_required">Height is required!</string>
    <string name="error_weight_required">Weight is required!</string>
    <string name="error_eyeColor_required">Eye Color is required!</string>
    <string name="error_hairColor_required">Hair Color is required!</string>
    <string name="error_email_required">Email is required!</string>
    <string name="error_validate_email">This email is not true!</string>
    <string name="error_phy_appearance_required">Physical Appearance is required!</string>
    <string name="error_acts_required">Acts is required!</string>
    <string name="error_not_allowed">Not allowed "numbers" in this field!</string>
    <string name="error_status_required">Status is required!</string>
    <string name="user_full_name">User Full Name</string>
    <string name="user_email">Email Address</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="button_register_user">Register User</string>
    <string name="button_update_user">Update User</string>
    <string name="error_please_provide_valid_email">Please provide valid email!</string>
    <string name="error_password_required">Password is required!</string>
    <string name="error_confirm_password_required">Confirm Password is required!</string>
    <string name="error_min_password_length">Min password length should be 6 characters!</string>
    <string name="error_confirm_password_not_same">Confirm Password is not same!</string>
    <string name="error_password_not_same">Passwords is not same!</string>
    <string name="error_phone_required">Phone number is required!</string>
    <string name="error_number_personal_required">Personal number is required!</string>
    <string name="error_number_personal_is_ten_digit">Error, more than 10 digits!</string>
    <string name="error_number_personal_less_than_ten_digits">Error, personal number is fixed 10 digits!</string>
    <string name="error_password_weak">Weak Password: Minimum eight characters, at least one letter and one number.</string>
    <string name="user_registered_successfully">User has been registered successfully!</string>
    <string name="user_failed_to_register">Failed to register user! Try again!</string>
    <string name="role_not_finded">Role not finded!</string>
    <string name="user_not_finded">User not finded!</string>
    <string name="user_not_exist">User not exist!</string>
    <string name="logins_successfully">Logins successfully!</string>
    <string name="logins_failed">Logins failed!</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="profile_label">PROFILE</string>
    <string name="your_name">Your Name</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="delete_user">Delete User</string>
    <string name="image_uploaded">Image Uploaded!</string>
    <string name="image_failed_to_uplaod">Image failed to upload!</string>
    <string name="image_not_set">Image not set!</string>
    <string name="role">Role</string>
    <string name="Data_success_updated">Data has been updated, to see results u need to re-login again!</string>
    <string name="edit_data">Edit Data</string>
    <string name="this_person_with_this">The person with name: </string>
    <string name="was_registered_successfully"> was registered successfully</string>
    <string name="person_failed_to_register">Person failed to register!</string>
    <string name="tap_to_add_profile_picture">Tap to add Profile Picture</string>
    <string name="successfully">Successfully!</string>
    <string name="uri_failed_to_set">Uri failed to set!</string>
    <string name="profile_picture_added">Profile Picture added!</string>
    <string name="select_a_status">Select a status</string>
    <string name="see_users">See Users</string>
    <string name="see_persons">See Persons</string>
    <string name="location_reports">Location Reports</string>
    <string name="analytics">ANALYTICS</string>
    <string name="four_items">4 Items</string>
    <string name="six_items">6 Items</string>
    <string name="thank_location">The location was taken thanks for the cooperation</string>
    <string name="Location">Location: </string>
    <string name="person_delete_successfully">is deleted successfully!</string>
    <string name="person_delete_failed"> failed to delete!</string>
    <string name="let_get_started">Let\'s get started</string>
    <string name="register">Register</string>
    <string name="register_label">REGISTER</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back  </string>
    <string name="exist_in_database"> Exists in database!</string>
    <string name="sign_in_google">Sign In Google</string>
    <string name="sign_in_phone">Sign In Phone</string>
    <string name="sign_in_anonymous">Sign In Anonymous</string>
    <string name="registration">Registration</string>
    <string name="verification">Verification</string>
    <string name="verification_code">Verification code</string>
    <string name="code">Code</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify_code">Verify code</string>
    <string name="please_enter_your_country_code_and_phone_number_for_verification">Please enter your country code and phone number for verification</string>
    <string name="phone_number">Phone number</string>
    <string name="generate_continue">Continue</string>
    <string name="text_verification">Verification code was sent to</string>
    <string name="error_please_fill_in_the_form_to_continue">Please fill in the form to continue.</string>
    <string name="we_have_send_you_an_code_for">We have send you an OTP code for</string>
    <string name="for_verification">for verification</string>
    <string name="there_was_an_error_verifying_otp">There was an error verifying OTP</string>
    <string name="error_verification_failed_please_try_again">Verification Failed, please try again!</string>
    <string name="error_failed_to_login_as_anonymous">Failed to login as anonymous, please try again!</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP? <b>Resend</b></string>
    <string name="please_enter_verification_code">Please enter verification code....</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="verification_code_sent">Verification code sent...</string>
    <string name="parent_name">Parent Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="verification_email_sent_to">Verification email sent to</string>
    <string name="failed_to_send_verification_email">Failed to send verification email.</string>
    <string name="please_verify_email_to_login_check_in_email_we_sent_link_for_verification">Please verify email to login, check in email we sent link for verification!</string>
    <string name="reset_password">Reset Password</string>
    <string name="check_your_email_to_reset_password">Check your email to reset password!</string>
    <string name="error_try_again_something_wrong_happened">Try again! Something wrong happened!</string>
    <string name="error_no_internet_connection_check_wifi_or_mobile_data">Check wifi or mobile data, Do you want to go to settings menu?"</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="skip">Skip</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="report">Report</string>
    <string name="add_any_additional_info_optional">Add any additional info (optional)</string>
    <string name="choose">Choose</string>
    <string name="upload_any_media_optional">Upload any media (Optional)</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string-array name="physical_appearance">
        <item>Very Good</item>
        <item>Good</item>
        <item>Weak</item>
    </string-array>
    <string-array name="acts">
        <item>Serious theft</item>
        <item>Easy theft</item>
        <item>Robbery</item>
        <item>Abduction</item>
        <item>Narcotics trafficking</item>
        <item>Trafficking in human beings</item>
        <item>Attempted murder</item>
        <item>Murder</item>
    </string-array>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="status">Status</string>
    <string name="age">AGE</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="appearance">Appearance</string>
    <string name="dark_mode">Dark mode</string>
    <string name="system_mode">System mode</string>
    <string name="light_mode">Light mode</string>
    <string name="withdraw">Withdraw</string>
</resources>