<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">
        <SwitchPreferenceCompat
            app:key="@string/notifications"
            app:title="@string/turn_on_notification" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance">

        <SwitchPreferenceCompat
            app:key="appearance"
            app:title="@string/dark_mode" />

        <SwitchPreferenceCompat
            app:key="appearance"
            app:title="@string/system_mode" />

        <SwitchPreferenceCompat
            app:key="appearance"
            app:title="@string/light_mode"/>


    </PreferenceCategory>

</PreferenceScreen>