<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications">
        <SwitchPreferenceCompat
            app:key="allowNotification"
            android:defaultValue="true"
            app:icon="@drawable/ic_settings_notification"
            app:title="@string/allow_notification" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:icon="@drawable/ic_baseline_dark_mode_24"
            app:title="@string/dark_mode" />

        <SwitchPreferenceCompat
            app:key="system_mode"
            app:icon="@drawable/ic_system_mode"
            app:title="@string/system_mode" />

        <SwitchPreferenceCompat
            app:key="light_mode"
            app:icon="@drawable/ic_baseline_light_mode_24"
            app:title="@string/light_mode"/>

    </PreferenceCategory>

</PreferenceScreen>