<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_group_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/menu_group_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search" />
        <item
            android:id="@+id/menu_group_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_group_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_logout"/>
            </group>
        </menu>
    </item>
</menu>