<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".RegisterPerson">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_regPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_person"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/et_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_register_persons"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textSize="16sp"
                android:layout_below="@+id/tv_regPerson"
                style="@android:style/Widget.EditText"
                android:imeOptions="actionNext"></EditText>

            <EditText
                android:id="@+id/et_address"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_register_persons"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_fullName"></EditText>

            <EditText
                android:id="@+id/et_age"
                android:background="@drawable/et_register_persons"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_address"></EditText>

            <EditText
                android:id="@+id/et_height"
                android:background="@drawable/et_register_persons"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:inputType="number"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_age"></EditText>

            <EditText
                android:id="@+id/et_weight"
                android:background="@drawable/et_register_persons"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="number"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_height"></EditText>

            <EditText
                android:id="@+id/et_eyeColor"
                android:background="@drawable/et_register_persons"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eye_color"
                android:inputType="text"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_weight"></EditText>

            <EditText
                android:id="@+id/et_hairColor"
                android:background="@drawable/et_register_persons"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hair_color"
                android:inputType="text"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_eyeColor"></EditText>

            <EditText
                android:id="@+id/et_phy_appearance"
                android:background="@drawable/et_register_persons"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/physical_appearance"
                android:inputType="text"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_hairColor"></EditText>

            <EditText
                android:id="@+id/et_acts"
                android:background="@drawable/et_register_persons"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/acts"
                android:inputType="text"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_phy_appearance"></EditText>

            <EditText
                android:id="@+id/et_status"
                android:background="@drawable/et_register_persons"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:inputType="text"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_acts"></EditText>

            <Button
                android:id="@+id/registerPerson"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/register_person"
                android:background="@drawable/bt_register_person"
                android:layout_below="@+id/et_status"></Button>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_height="match_parent"
                android:layout_width="75dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

</androidx.core.widget.NestedScrollView>