<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_color"
    tools:context=".Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_profile"
            android:background="@drawable/circle_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:src="@drawable/ic_add_photo" />

        <ImageView
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:id="@+id/ic_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:layout_below="@id/img_profile"/>

        <TextView
            android:id="@+id/tv_role"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Role"
            android:textSize="16dp"
            android:textColorHint="@color/white"
            android:layout_toRightOf="@id/ic_settings"
            android:layout_below="@id/img_profile" />

        <TextView
            android:id="@+id/tv_real_role"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_settings"
            android:text="Your Role"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_below="@id/tv_role" />

        <ImageView
            android:padding="16dp"
            android:id="@+id/ic_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile_user"
            android:layout_below="@id/tv_real_role"/>

        <TextView
            android:padding="16dp"
            android:id="@+id/tv_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textSize="16dp"
            android:textColorHint="@color/white"
            android:layout_toRightOf="@id/ic_settings"
            android:layout_below="@id/tv_real_role" />

        <TextView
            android:padding="16dp"
            android:id="@+id/tv_real_fullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_user"
            android:text="@string/your_name"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_below="@id/tv_fullName" />

        <ImageView
            android:padding="16dp"
            android:id="@+id/ic_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"
            android:layout_below="@id/tv_real_fullName"/>

        <TextView
            android:padding="16dp"
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:textSize="16dp"
            android:textColorHint="@color/white"
            android:layout_toRightOf="@id/ic_user"
            android:layout_below="@id/tv_real_fullName" />

        <TextView
            android:padding="16dp"
            android:id="@+id/tv_real_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_user"
            android:text="@string/your_email_address"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_below="@id/tv_email" />

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/bt_changeProfileImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_image"
            android:layout_below="@id/tv_real_email" />

        <Button
            android:id="@+id/bt_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_below="@id/bt_changeProfileImage" />

    </RelativeLayout>

</ScrollView>